--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -5,6 +5,6 @@
   <title>MartFleet Teste</title>
 </head>
 <body>
-  <h1>Olá, MartFleet!</h1>
+  <h1>Olá, MartFleet! Seja bem vindo</h1>
 </body>
 </html>
